# pico-tic-tac-toe

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  flash.sh  pico_sdk_import.cmake
src/: CMakeLists.txt  blink.c  bt_client.c  bt_client.h  bt_server.c  bt_server.h  btstack_config.h  keypad_wrapper.cpp  keypad_wrapper.h  main.gatt  pico_main.c  pico_tic_tac_toe.c  player_0.c  player_0_gatt.c  player_0_gatt.gatt  player_0_gatt.h  player_1.c  player_1_gatt.c  player_1_gatt.gatt  player_1_gatt.h  tic_tac_toe.c  tic_tac_toe.h
test/: CMakeLists.txt  test_tic_tac_toe.c
